--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -1,6 +1,7 @@
 Appbundle\Entity\Genus:
     genus_{1..10}:
-        name: <name()>
+        name: <genus()>
         subFamily: <text(20)>
         speciesCount: <numberBetween(100, 100000)>
         funFact: <sentence()>
+        isPublished: <boolean(75)>
