--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -5,3 +5,10 @@ Appbundle\Entity\Genus:
         speciesCount: <numberBetween(100, 100000)>
         funFact: <sentence()>
         isPublished: <boolean(75)>
+
+Appbundle\Entity\GenusNote:
+    genus.note_{1..100}:
+        username: <userName()>
+        userAvatarFilename: '50%? leanna.jpg : ryan.jpg'
+        note: <paragraph()>
+        createdAt: <dateTimeBetween('-6 months', 'now')>
