added GenusNote.Genus key to fixures and Genus.updatedAt migration

--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -12,3 +12,4 @@ Appbundle\Entity\GenusNote:
         userAvatarFilename: '50%? leanna.jpg : ryan.jpg'
         note: <paragraph()>
         createdAt: <dateTimeBetween('-6 months', 'now')>
+        genus: '@genus_*'
