--- a/src/AppBundle/DataFixtures/ORM/fixtures.yml
+++ b/src/AppBundle/DataFixtures/ORM/fixtures.yml
@@ -1,12 +1,13 @@
-Appbundle\Entity\Genus:
+AppBundle\Entity\Genus:
     genus_{1..10}:
         name: <genus()>
-        subFamily: <text(20)>
+        subFamily: '@subfamily_*'
         speciesCount: <numberBetween(100, 100000)>
         funFact: <sentence()>
         isPublished: <boolean(75)>
+        firstDiscoveredAt: <dateTimeBetween('-200 years', 'now')>
 
-Appbundle\Entity\GenusNote:
+AppBundle\Entity\GenusNote:
     genus.note_{1..100}:
         username: <userName()>
         userAvatarFilename: '50%? leanna.jpg : ryan.jpg'
